ingress/app-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapp-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeapp
  template:
    metadata:
      name: kubeapp
      labels:
        app: kubeapp
        env: canary
    spec:
      containers:
      - name: kubeapp
        image: canary-app:2.0
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        command: ["/app"]
        ports:
        - name: kubeapp
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubeapp-canary-service
  labels:
    app: kubeapp
    env: canary
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubeapp
    env: canary
