ingress/app-ingress-canary.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  backend:
    serviceName: kubeapp-canary-service
    servicePort: 80
