ingress/app-ingress-production.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  backend:
    serviceName: kubeapp-production-service
    servicePort: 80
